//
// Protocol buffers definition
//
syntax = "proto3";
package pt.ulisboa.tecnico.sirs.contracts.grpc;

option java_multiple_files = true;

service WebserverService {
	rpc register(RegisterRequest) returns (AckResponse);
	rpc login(LoginRequest) returns (LoginResponse);
	rpc logout(LogoutRequest) returns (AckResponse);
	rpc addAppliance(AddEquipmentRequest) returns (AckResponse);
	rpc addSolarPanel(AddEquipmentRequest) returns (AckResponse);
	rpc checkPersonalInfo(CheckPersonalInfoRequest) returns (CheckPersonalInfoResponse);
	rpc checkEnergyPanel(CheckEnergyPanelRequest) returns (CheckEnergyPanelResponse);
	rpc checkInvoices(CheckInvoicesRequest) returns (CheckInvoicesResponse);
	rpc updateAddress(UpdateAddressRequest) returns (AckResponse);
	rpc updatePlan(UpdatePlanRequest) returns (AckResponse);
}

enum PlanType {
	FLAT_RATE = 0;
	BI_HOURLY_RATE = 1;
}

message AckResponse {
	bool ack = 1;
}

// Register
message RegisterRequest {
	string name = 1;
	string email = 2;
	string password = 3;
	string address = 4;
	string IBAN = 5;
	PlanType plan = 6;
}

// Login

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string name = 1;
	string hashedToken = 2;
}

// Logout

message LogoutRequest {
	string email = 1;
	string hashedToken = 2;
}

// Add appliance or solar panel

message AddEquipmentRequest {
	string email = 1;
	string equipmentName = 2;
	string equipmentBrand = 3;
	string hashedToken = 4;
}
// Check personal info

message PersonalInfo {
	string name = 1;
	string email = 2;
	string address = 3;
	string IBAN = 4;
	PlanType plan = 5;
}

message CheckPersonalInfoRequest {
	string email = 1;
	string hashedToken = 2;
}

message CheckPersonalInfoResponse {
	PersonalInfo personalInfo = 1;
}

// Check energy panel

message EnergyPanel {
	string energyConsumed = 1;
	string energyConsumedDaytime = 2;
	string energyConsumedNight = 3;
	string energyProduced = 4;
	repeated Appliance appliances = 5;
	repeated SolarPanel solarPanels = 6;
}

message SolarPanel {
	string name = 1;
	string brand = 2;
	string energyProduced = 3;
}

message Appliance {
	string name = 1;
	string brand = 2;
	string energyConsumed = 3;
	string energyConsumedDaytime = 4;
	string energyConsumedNight = 5;
}

message CheckEnergyPanelRequest {
	string email = 1;
	string hashedToken = 2;
}

message CheckEnergyPanelResponse {
	EnergyPanel energyPanel = 1;
}

// Check invoices

message Invoice {
	int32 year = 1;
	string month = 2;
	string paymentAmount = 3;
	string energyConsumed = 4;
	string energyConsumedDaytime = 5;
	string energyConsumedNight = 6;
	PlanType plan = 7;
	int32 taxes = 8;
}

message CheckInvoicesRequest {
	string email = 1;
	string hashedToken = 2;
}

message CheckInvoicesResponse {
	repeated Invoice invoices = 1;
}

// Update personal address

message UpdateAddressRequest {
	string email = 1;
	string address = 2;
	string hashedToken = 3;
}

// Update personal plan

message UpdatePlanRequest {
	string email = 1;
	PlanType plan = 2;
	string hashedToken = 3;
}
